--- a/Merida.css
+++ b/Merida.css
@@ -101,7 +101,7 @@ table {
      inset 5px 5px 5px darkseagreen;
     padding: 20px;
     float:bottom;
-    width: 1200px;
+    width: 98%;
     height: 40px;
     background:linear-gradient(greenyellow,lightgreen,lightblue);
 }
